profile/index.css
.csq__profile--body {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin: auto;
}
@media screen and (min-width: 768px) {
  body {
    display: grid;
    grid-template-areas:
      "nav nav nav nav nav nav nav nav nav nav nav nav"
      "lside lside . con con con con con con . rside rside"
      "foot foot foot foot foot foot foot foot foot foot foot foot";
    grid-template-rows: minmax(10vh, max-content) 1fr minmax(10vh, max-content);
  }
  .lg2__header {
    grid-area: nav;
  }
  .lg2__main {
    grid-area: con;
  }
  .lg2__aside--right {
    grid-area: rside;
  }
  .lg2__footer {
    grid-area: foot;
  }
}
/*=====  End of usage layout  ======*/

